<resources>
    <string name="app_name">ToDoList</string>
    <string name="today_date">today date</string>
    <string name="logo">Logo</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="your_name">Your Name</string>
    <string name="first_step">First Step</string>
    <string name="user_avatar">User Avatar</string>
    <string name="menu_name">Menu name</string>
    <string name="menu_icon">Menu icon</string>
    <string name="zero">0</string>

    <string name="to_do">To Do</string>
    <string name="important">Important</string>
    <string name="planned">Planned</string>
    <string name="today">Today</string>

    <string name="task_name">Task name</string>
    <string name="set_due_date">Set due date</string>
    <string name="set_reminder">Set reminder</string>
    <string name="check_box">Check box</string>

    <string name="task_id">id</string>
</resources>
